Refactor run scripts to use dynamic versioning for JavaFX and GraalVM modules